test/compile-fail/resolution/pub/in-non-special/expected.txt
error[E0742]: incorrect visibility restriction
  ┌─ ./test/compile-fail/resolution/pub/in-non-special/top.rhdl:1:8
  │
1 │ pub(in b) struct a {}
  │        ^
  │
  = visibility can only be restricted to a local ancestral scope: crate, super, or a path beginning with the former two

